login and signup added

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                 </nav>
 
                 <div class="desktop-buttons">
-                    <button class="btn btn-outline">Log In</button>
-                    <button class="btn btn-primary">Sign Up</button>
+                    <button class="btn btn-outline" onclick="window.location.href='login.html'">Log In</button>
+                    <button class="btn btn-primary" onclick="window.location.href='signup.html'">Sign Up</button>
                 </div>
 
                 <!-- Mobile Menu Button -->
@@ -70,7 +70,7 @@
                 <a href="#about" class="mobile-nav-link">About</a>
                 <a href="#contact" class="mobile-nav-link">Contact</a>
                 <div class="mobile-buttons">
-                    <button class="btn btn-outline w-full">Log In</button>
+                    <button class="btn btn-outline w-full" onclick="window.location.href='login.html'">Log In</button>
                     <button class="btn btn-primary w-full">Sign Up</button>
                 </div>
             </div>
